added Dashboard and testcases
